Improvements to Toffoli Gate Algorithm

--- a/N Input Bit Toffoli Gate.ipynb
+++ b/N Input Bit Toffoli Gate.ipynb
@@ -75,8 +75,7 @@
    ],
    "source": [
     "qcs = toffoliGate(4)\n",
-    "vec = Statevector.from_label('11111')\n",
-    "vec = vec.evolve(qcs)\n",
+    "vec = Statevector.from_label('11111').evolve(qcs)\n",
     "# print(vec.data)\n",
     "plot_bloch_multivector(vec.data)\n",
     "# qcs.draw(\"mpl\")"
